# Corvid

./: .clang-format  .clang-tidy  .clangd  .clangd.in  .clangd.win.in  .clinerules  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Corvid.sln  CUsersUser.claudeprojectsc--code-Corvidc9adbe3d-811a-4e38-b92f-ba0561ae71ectool-resultsavatar.txt  README.md  TODO  claude-codex-gateway.txt  cleanbuild.bat  cleanbuild.ps1  cleanbuild.sh  crossplatform.md  error-handling-policy.md  format_all.ps1  format_all.sh  start_sim.sh  wsl-instructions.md
.claude/: settings.json
.github/: copilot-instructions.md
LibCorvid/: .clang-format  LibCorvid.cpp  LibCorvid.vcxproj  LibCorvid.vcxproj.filters
LibCorvid/includes/: Bitmask.h  BitmaskEnum.h  CStringView.h  ConcatJoin.h  Containers.h  Interval.h  Meta.h  OptionalPtr.h  SequenceEnum.h  SequentialEnum.h  StringUtils.h
UnitTests/: .clang-format  BitmaskEnumTest.cpp  BitmaskTest.cpp  CStringViewTest.cpp  ContainersTest.cpp  IntervalTest.cpp  MetaTest.cpp  OptionalPtrTest.cpp  SequenceEnumTest.cpp  SequentialEnumTest.cpp  StringUtilsTest.cpp  UnitTests.vcxproj
corvid/: concurrency.h  containers.h  controllers.h  deps.md  ecs.h  enums.h  filesys.h  infra.h  lang.h  math.h  meta.h  proto.h  strings.h
corvid/concurrency/: CLAUDE.md  idle_timeout.h  jthread_stoppable_sleep.h  notifiable.h  owner_thread_dispatcher.h  relaxed_atomic.h  sync_lock.h  timeout_sweeper.h  timeout_sweeper_base.h  timeouts.h  timer_fuse.h  timers.h  timing_wheel.h  tombstone.h
corvid/containers/: CLAUDE.md  archetype_vector.h  arena_allocator.h  circular_buffer.h  containers_shared.h  custom_handle.h  enum_variant.h  enum_vector.h  finders.h  fixed_bitset.h  hash_combiner.h  indirect_key.h  intern.h  interval.h  notifiable.h  object_pool.h  opt_find.h  optional_ptr.h  own_ptr.h  ranges.h  scope_exit.h  scoped_value.h  stable_ids.h  strong_type.h  sync_lock.h  timers.h  tombstone.h  transparent.h
corvid/controllers/: pid_controller.h  sopdt_plant.h
corvid/cuda/: array_owner.cuh  avatar.cuh  avatar.md  camera.cuh  cuda_array_3d.cuh  cuda_cublas.cuh  cuda_device.cuh  cuda_event.cuh  cuda_handle.cuh  cuda_kernel.cuh  cuda_ptr.cuh  cuda_status.cuh  cuda_surface.cuh  cuda_texture.cuh  cuda_volume.cuh  cuda_warp.cuh  curriculum.md  density_field.cuh  material_volume.cuh  mirror.cuh  model.md  radians.cuh  raycast.cuh  render_config.cuh  saxpy.cuh  sdf.cuh  strata.cuh  (+4 more)
cuda/: cuda_status.cuh
includes/: containers.h  enums.h  meta.h  strings.h
scripts/: build_msan_libcxx.sh  build_openssl_quic.sh  check_layering.sh  fetch_sdl3.ps1  ide_build.ps1  ide_build.sh  msan-libcxx-ignorelist.txt  ncu.sh
tests/: .clang-tidy  .env  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AccutestShim.h  AcutestShim.h  CMakeLists.txt  ClangExeProject.sln  Makefile  MyProject.sln  MyProject.vcxproj  MyProject.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bitmask_enum_test-clang.exe.vcxproj  bitmask_enum_test-clang.exe.vcxproj.filters  bitmask_enum_test.cpp  catch2_main.h  charconv_wrapper_test.cpp  circular_buffer_test-clang.exe.vcxproj  circular_buffer_test-clang.exe.vcxproj.filters  circular_buffer_test.cpp  clean-all.vcxproj  clean-all.vcxproj.filters  cleanit.vcxproj  cleanit.vcxproj.filters  cmake_install.cmake  comprehensive.cmake  concurrency_test.cpp  containers_test-clang.exe.vcxproj  containers_test-clang.exe.vcxproj.filters  containers_test.cpp  controllers_test.cpp  corvid_sim.cpp  cstring_view_test-clang.exe.vcxproj  cstring_view_test-clang.exe.vcxproj.filters  cstring_view_test.cpp  cuda_device_test.cu  cuda_sapxy_parallel_test.cu  cuda_saxpy_test.cu  (+84 more)
tests/cuda/: avatar_body_test.cu  cuda_device_test.cu  cuda_saxpy_test.cu  cuda_status_test.cu  notest_cuda_matmul.cu  notest_cuda_matmul_tiled.cu  notest_cuda_sapxy_parallel_test.cu  notest_cuda_tutor_1.cu  notest_cuda_tutor_2.cu  notest_cuda_tutor_3.cu  raycast_test.cu
tests/cuda/windows/: cuda_d3d11_interop_test.cu  notest_fractal_viewer.cu  notest_raymarch_viewer.cu  notest_voxel_viewer.cu
tests/linux/: epoll_tests.cpp  http3_conn_test.cpp  http3_header_test.cpp  http3_server_stream_test.cpp  http3_stream_test.cpp  http_header_block_tests.cpp  http_server_tests.cpp  iou_buf_pool_test.cpp  iou_dgram_router_test.cpp  iou_loop_test.cpp  iou_provided_buf_pool_test.cpp  iou_stream_conn_test.cpp  iov_queue_test.cpp  netsocket_tests.cpp  nghttp3_smoke_test.cpp  notest_corvid_sim.cpp  notest_http3_client_test.cpp  osfile_tests.cpp  owner_thread_dispatcher_test.cpp  proto_test.cpp  quic_conn_test.cpp  quic_dgram_echo_test.cpp  quic_dgram_http3_test.cpp  quic_dgram_router_test.cpp  quic_header_test.cpp  sim_world_test.cpp  websocket_tests.cpp
tests/portable/: bitmask_enum_test.cpp  charconv_wrapper_test.cpp  circular_buffer_test.cpp  containers_test.cpp  controllers_test.cpp  cstring_view_test.cpp  ecs_test.cpp  entity_registry_test.cpp  enum_formatter_test.cpp  find_opt_test.cpp  fixed_bitset_test.cpp  fixed_string_test.cpp  formatting_test.cpp  id_container_test.cpp  idle_timeout_test.cpp  infra_clocks_test.cpp  infra_log_test.cpp  infra_scope_exit_test.cpp  intern_table_test.cpp  interval_test.cpp  json_parser_test.cpp  lang_test.cpp  math_test.cpp  meta_test.cpp  notifiable_test.cpp  object_pool_test.cpp  one_euro_filter_test.cpp  opt_string_view_test.cpp  optional_ptr_test.cpp  sequence_enum_test.cpp  string_view_wrapper_test.cpp  strings_test.cpp  tagged_string_view_test.cpp  targeting_test.cpp  timeout_sweeper_test.cpp  timerfuse_test.cpp  timers_test.cpp  timing_wheel_test.cpp  tombstone_test.cpp  utf8_checker_tests.cpp
tests/windows/: d3d11_swapchain_test.cpp  sdl_event_test.cpp  sdl_event_type_test.cpp  sdl_window_test.cpp
tests/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
tests/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tests/x64/Debug/clean-all/: clean-all.recipe
tests/x64/Debug/clean-all/clean-all.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  clean-all.lastbuildstate
(+317 files in other folders)
